Stable version 0.5.0 release Bot now works with Users database and can optimally use memory as cache. Some test functions is present to test the bot ability to save Users.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         "sourceMap": true,
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "exclude": [
         "node_modules",
