--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "andar",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "description": "Bot for language learning",
   "main": "dist/index.js",
   "scripts": {
@@ -10,11 +10,13 @@
   "author": "NedloG",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {
+    "@types/i18n": "^0.12.0",
     "@types/node": "^14.14.21",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "i18n": "^0.13.2",
     "sqlite3": "^5.0.1",
     "telegraf": "^4.0.1",
     "typeorm": "^0.2.30"
