--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Bot for language learning",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "npm run build && npm run start",
+    "postinstall": "npm run build"
   },
   "author": "NedloG",
   "license": "CC-BY-NC-4.0",
